--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "fastclick": "^1.0.6",
+    "swiper": "^4.3.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
