--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.12.4",
     "fastclick": "^1.0.6",
     "swiper": "^4.3.3",
     "vue": "^2.5.2",
